Ameliorer la creation des objets