@@ -1,20 +1,29 @@
 package com;
 
+import java.util.HashMap;
+import java.util.Map;
 import java.util.Scanner;
 
-//TIP To <b>Run</b> code, press <shortcut actionId="Run"/> or
-// click the <icon src="AllIcons.Actions.Execute"/> icon in the gutter.
+
 public class Main {
-    public static void main(String[] args) throws ClassNotFoundException, InstantiationException, IllegalAccessException {
+    public static void main(String[] args) throws  Exception {
         Context context = new Context();
         Scanner scanner = new Scanner(System.in);
+        Map<String, Strategy> StrategyMap = new HashMap<>();
+        Strategy strategy;
+            while(true){
 
-        while (true){
-            System.out.println("Quelle est la strategie ?");
+            System.out.println("Quelle strategie ?");
             String  str= scanner.nextLine();
-            Strategy strategy = (Strategy) Class.forName("com.StrategyImpl"+str).newInstance();
+            strategy=StrategyMap.get(str);
+            if(strategy == null){
+                System.out.println("Creation d'un nouvel objet de StrategyImpl"+str);
+                strategy = (Strategy) Class.forName("com.StrategyImpl"+str).getConstructor().newInstance();
+                StrategyMap.put(str, strategy);
+            }
             context.setStrategy(strategy);
             context.effectuerOperation();
         }
     }
+
 }
